MD Settings: don't allow supervised users to switch to GTK+ theme

R=dpapad@chromium.org
BUG=655948
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2426863002
Cr-Commit-Position: refs/heads/master@{#426093}

Former-commit-id: a3579d084d1c7856a8ccff5d6191d6eaba9fad97