chrome/browser/resources/settings/appearance_page/compiled_resources2.gyp
@@ -21,6 +21,7 @@
       'dependencies': [
         '<(DEPTH)/ui/webui/resources/js/compiled_resources2.gyp:assert',
         '<(DEPTH)/ui/webui/resources/js/compiled_resources2.gyp:cr',
+        '<(DEPTH)/ui/webui/resources/js/compiled_resources2.gyp:load_time_data',
         '<(EXTERNS_GYP):management',
         '<(EXTERNS_GYP):chrome_send',
       ],
